// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders correclty just with an icon 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault medium"
    data-testid="button"
    type="button"
  >
    <svg
      class="buttonIcon"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="22 12 18 12 15 21 9 3 6 12 2 12"
      />
    </svg>
    <span
      class="buttonWithIcon"
    />
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders correctly as secondary 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault secondary medium"
    data-testid="button"
    type="button"
  >
    <span
      class=""
    >
      Dados Abertos
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders correctly by default 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault medium"
    data-testid="button"
    type="button"
  >
    <span
      class=""
    >
      Dados Abertos
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders correctly large size 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault medium large"
    data-testid="button"
    type="button"
  >
    <span
      class=""
    >
      Dados Abertos
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders correctly medium size 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault medium"
    data-testid="button"
    type="button"
  >
    <span
      class=""
    >
      Dados Abertos
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders correctly rounded 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault rounded medium"
    data-testid="button"
    type="button"
  >
    <span
      class=""
    >
      Dados Abertos
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders correctly small size 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault small medium"
    data-testid="button"
    type="button"
  >
    <span
      class=""
    >
      Dados Abertos
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders correctly using html attributes 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault medium"
    data-testid="button"
    name="dados-button"
    type="button"
  >
    <span
      class=""
    >
      Dados Abertos
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders correctly with an icon and text 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault medium"
    data-testid="button"
    type="button"
  >
    <svg
      class="buttonIcon"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="22 12 18 12 15 21 9 3 6 12 2 12"
      />
    </svg>
    <span
      class="buttonWithIcon"
    >
      Dados Abertos
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders correctly with text type 1`] = `
<DocumentFragment>
  <button
    class="buttonDefault medium typeText"
    data-testid="button"
    type="button"
  >
    <span
      class=""
    >
      Dados Abertos
    </span>
  </button>
</DocumentFragment>
`;
